[package]
name = "jwctl"
version = "0.4.0"
edition = "2021"
description = "A CLI for interacting with the JumpWire proxy engine."
homepage = "https://jumpwire.io/"
repository = "https://github.com/extragoodlabs/jwctl/"
license-file = "LICENSE"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = true

[dependencies]
anyhow = "1.0.72"
clap = { version = "4.3.19", features = ["derive"] }
config = "0.13.3"
crossterm = "0.27.0"
home = "0.5.5"
itertools = "0.11.0"
log = "0.4.19"
open = "5.0.0"
ratatui = { version = "0.22.0", features = ["serde"] }
reqwest = { version = "0.11.18", features = ["blocking", "json", "rustls-tls-native-roots", "cookies"], default-features = false }
reqwest_cookie_store = "0.6.0"
serde = { version = "1.0.179", features = ["serde_derive"] }
serde_json = "1.0.104"
simplelog = { version = "0.12.1", features = ["paris"] }
strum = { version = "0.25.0", features = ["derive"] }
strum_macros = "0.25.2"
url = { version = "2.4.0", features = ["serde"] }
urlencoding = "2.1.3"
